# typewriter

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
pyannotate_tools/annotations/: __main__.py
pyannotate_tools/annotations/tests/: dundermain_test.py
pyannotate_tools/docs/: formats.py
pyannotate_tools/docs/parsers/: __init__.py  other.py  rest.py
pyannotate_tools/fixes/: base.py  fix_annotate.py  fix_annotate_any.py  fix_annotate_command.py  fix_annotate_docs.py  fix_annotate_json.py
pyannotate_tools/fixes/tests/: base_py2.py  base_py3.py  test_annotate_any_py2.py  test_annotate_any_py3.py  test_annotate_command_py2.py  test_annotate_command_py3.py  test_annotate_json_py2.py  test_annotate_json_py3.py
tests/: integration_test.py  test_convert.py
tests/fixtures/configs/test2/: setup.cfg
tests/fixtures/formats/: googledoc.py  numpydoc.py  restdoc.py
tests/fixtures/results/: googledoc.test1.py  googledoc.test2.py  numpydoc.test1.py  numpydoc.test2.py  restdoc.test1.py  restdoc.test2.py
typeright/: __main__.py
typeright/annotations/: infer.py  main.py  parse.py  types.py
typeright/annotations/tests/: dundermain_test.py  infer_test.py  main_test.py  parse_test.py  types_test.py
typeright/docs/: formats.py
typeright/docs/parsers/: __init__.py  other.py  rest.py
typeright/fixes/: base.py  fix_annotate_command.py  fix_annotate_json.py  fixer_utils.py
typeright/fixes/tests/: base_py2.py  base_py3.py  test_annotate_any_py2.py  test_annotate_any_py3.py  test_annotate_command_py2.py  test_annotate_command_py3.py  test_annotate_json_py2.py  test_annotate_json_py3.py
typewriter/: __main__.py
typewriter/annotations/: infer.py  main.py  parse.py
typewriter/annotations/tests/: dundermain_test.py  infer_test.py  main_test.py  parse_test.py  types_test.py
typewriter/docs/: formats.py
typewriter/docs/parsers/: other.py  rest.py
typewriter/fixes/: base.py  fix_annotate_any.py  fix_annotate_command.py  fix_annotate_docs.py  fix_annotate_json.py  fixer_utils.py
typewriter/fixes/tests/: base_py2.py  base_py3.py  test_annotate_any_py2.py  test_annotate_any_py3.py  test_annotate_command_py2.py  test_annotate_command_py3.py  test_annotate_json_py2.py  test_annotate_json_py3.py  test_util.py
